# xbox-sqlite

./: .env  Cargo.toml  LICENSE  README.md  database.db  oops.txt  test.db  test_crash_logs.json  test_processes.json  test_save.json  test_servers.json  test_system_metrics.json
migrations/2025-12-15-062601-0000_create_servers/: down.sql  up.sql
migrations/2025-12-15-063138-0000_add_processes_and_logs/: down.sql  up.sql
src/: database.rs  lib.rs  main.rs  models.rs  schema.rs  services.rs
