[package]
name = "blackbox"
version = "0.1.0"
edition = "2024"
description = "高性能服务器监控数据管理系统"
license = "MIT"
repository = "https://github.com/your-username/blackbox"
keywords = ["monitoring", "database", "sqlite", "server", "metrics"]
categories = ["database", "command-line-utilities"]

[lib]
name = "blackbox"
path = "src/lib.rs"

[[bin]]
name = "blackbox"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.4", features = ["sqlite", "chrono", "uuid"] }
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
lazy_static = "1.5"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "serde",
]

# 右侧需要指定 SQLite 版本
[dependencies.libsqlite3-sys]
version = "0.27"
features = ["bundled"]